Fix missing background colour var

--- a/_init.scss
+++ b/_init.scss
@@ -54,6 +54,8 @@ $anchor-bottom: $grey-lighter !default;
 $anchor-bottom-hover: $orange !default;
 $mono-stack: monospace, monospace !default;
 $font-family: Helvetica, Arial, sans-serif !default;
+// temporary @todo: fix!
+$body-bg: $white !default;
 $bg-color: $white !default;
 $text-color: $grey-darkest !default;
 $spacing-unit: 0.25rem !default;
